[gd_scene load_steps=23 format=2]

[ext_resource path="res://assets/KinematicBody_Steve.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/KinematicBody_Steve.gd" type="Script" id=2]
[ext_resource path="res://assets/enemy.tscn" type="PackedScene" id=3]
[ext_resource path="res://textures/TactilePaving002_4K_Normal.jpg" type="Texture" id=4]
[ext_resource path="res://textures/TactilePaving002_4K_Roughness.jpg" type="Texture" id=5]
[ext_resource path="res://assets/locksLibrary.tres" type="MeshLibrary" id=6]
[ext_resource path="res://assets/coin.tscn" type="PackedScene" id=7]
[ext_resource path="res://fonts/Redkost Comic.otf" type="DynamicFontData" id=8]
[ext_resource path="res://sprites/hud_coin.png" type="Texture" id=9]
[ext_resource path="res://scripts/Label_Counter.gd" type="Script" id=10]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 15, 1, 15 )

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.988281, 0.828735, 0.100372, 1 )
roughness_texture = ExtResource( 5 )
normal_enabled = true
normal_scale = -5.0
normal_texture = ExtResource( 4 )
uv1_scale = Vector3( 0.2, 0.2, 0.2 )
uv1_triplanar = true

[sub_resource type="CubeMesh" id=3]
material = SubResource( 2 )
size = Vector3( 30, 2, 30 )

[sub_resource type="Animation" id=4]
resource_name = "enemy1animation"
length = 7.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5, 3.5, 5.5, 7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( -8.36892, 1, 0.665199 ), Vector3( -8.36892, 1, -9.47569 ), Vector3( 8.51832, 1, -9.47569 ), Vector3( -8.36892, 1, -9.47569 ), Vector3( -8.36892, 1, 0.665199 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5, 3.5, 5.5, 7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 380, 0, -150 ), Vector3( 580, 0, -320 ), Vector3( 380, 0, -150 ), Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "enemy1animation"
length = 7.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5, 3.5, 5.5, 7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( -4.72957, 1, 4.39131 ), Vector3( 4.20558, 1, 4.45072 ), Vector3( 4.49319, 1, 12.5102 ), Vector3( 4.20558, 1, 4.45072 ), Vector3( -4.72957, 1, 4.39131 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5, 3.5, 5.5, 7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 380, 0, -150 ), Vector3( 580, 0, -320 ), Vector3( 380, 0, -150 ), Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "enemy2animation"
length = 9.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5, 3, 4.5, 6, 7.5, 9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( -4.72957, 1, 4.39131 ), Vector3( 4.68302, 1, 4.39131 ), Vector3( 4.68302, 1, 12.3356 ), Vector3( 12.4392, 1, 12.3356 ), Vector3( 4.68302, 1, 12.3356 ), Vector3( 4.68302, 1, 4.39131 ), Vector3( -4.72957, 1, 4.39131 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5, 3, 4.5, 6, 7.5, 9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 100, 0, -100 ), Vector3( 200, 0, -200 ), Vector3( 300, 0, -300 ), Vector3( 200, 0, -200 ), Vector3( 100, 0, -100 ), Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "enemy3animation"
length = 13.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../enemy3:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2, 3.5, 6.5, 9.5, 11, 13 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( -0.762908, 1, -3.65694 ), Vector3( 12.3562, 1, -3.65694 ), Vector3( 12.3562, 1, -13.2198 ), Vector3( -12.5017, 1, -13.2198 ), Vector3( 12.3562, 1, -13.2198 ), Vector3( 12.3562, 1, -3.65694 ), Vector3( -0.762908, 1, -3.65694 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../enemy3:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2, 3.5, 6.5, 9.5, 11, 13 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 150, 0, -50 ), Vector3( 250, 0, -150 ), Vector3( 600, 0, -300 ), Vector3( 250, 0, -150 ), Vector3( 150, 0, -50 ), Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "enemy1animation"
length = 7.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5, 3.5, 5.5, 7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( -4.72957, 1, 4.39131 ), Vector3( 4.20558, 1, 4.45072 ), Vector3( 4.49319, 1, 12.5102 ), Vector3( 4.20558, 1, 4.45072 ), Vector3( -4.72957, 1, 4.39131 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5, 3.5, 5.5, 7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 380, 0, -150 ), Vector3( 580, 0, -320 ), Vector3( 380, 0, -150 ), Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "enemy2animation"
length = 9.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5, 3, 4.5, 6, 7.5, 9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( -4.72957, 1, 4.39131 ), Vector3( 4.68302, 1, 4.39131 ), Vector3( 4.68302, 1, 12.3356 ), Vector3( 12.4392, 1, 12.3356 ), Vector3( 4.68302, 1, 12.3356 ), Vector3( 4.68302, 1, 4.39131 ), Vector3( -4.72957, 1, 4.39131 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5, 3, 4.5, 6, 7.5, 9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 100, 0, -100 ), Vector3( 200, 0, -200 ), Vector3( 300, 0, -300 ), Vector3( 200, 0, -200 ), Vector3( 100, 0, -100 ), Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "enemy3animation"
length = 13.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2, 3.5, 6.5, 9.5, 11, 13 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( -0.462525, 1, -3.33559 ), Vector3( 12.3268, 1, -3.33559 ), Vector3( 12.3268, 1, -13.3928 ), Vector3( -12.4339, 1, -13.3928 ), Vector3( 12.3268, 1, -13.3928 ), Vector3( 12.3268, 1, -3.33559 ), Vector3( -0.462525, 1, -3.33559 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2, 3.5, 6.5, 9.5, 11, 13 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 150, 0, -50 ), Vector3( 250, 0, -150 ), Vector3( 600, 0, -300 ), Vector3( 250, 0, -150 ), Vector3( 150, 0, -50 ), Vector3( 0, 0, 0 ) ]
}

[sub_resource type="DynamicFont" id=11]
size = 60
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=12]
size = 110
font_data = ExtResource( 8 )

[node name="Spatial_Level" type="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0818291, 0, 0.0130234 )

[node name="Floor" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Floor"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.106438, 0.0528016, 0.072566 )
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="Floor"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00296211, -0.0822133, 0.00530243 )
mesh = SubResource( 3 )
material/0 = null

[node name="KinematicBody_Steve" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
script = ExtResource( 2 )

[node name="Spatial" type="Spatial" parent="KinematicBody_Steve"]
transform = Transform( 1, 0, 0, 0, 0.876475, 0.481448, 0, -0.481448, 0.876475, 0.194331, 7.52256, 11.5121 )

[node name="InterpolatedCamera" type="InterpolatedCamera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 27.1153, 30.3588 )
target = NodePath("../KinematicBody_Steve/Spatial")
speed = 3.0
enabled = true

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.778591, -0.528624, 0.338162, -0.475788, -0.145911, 0.867373, -0.409172, -0.836222, -0.365118, 0.285629, 10.1826, -2.32831e-08 )
shadow_enabled = true
shadow_color = Color( 0.65098, 0.756863, 0.231373, 1 )

[node name="GridMap" type="GridMap" parent="."]
mesh_library = ExtResource( 6 )
cell_size = Vector3( 1, 1, 1 )
data = {
"cells": PoolIntArray( 10, 0, 0, 14, 0, 0, 65521, 0, 0, 65525, 0, 0, 10, 1, 0, 14, 1, 0, 65521, 1, 0, 65525, 1, 0, 0, 2, 0, 1, 2, 0, 2, 2, 0, 3, 2, 0, 4, 2, 0, 5, 2, 0, 6, 2, 0, 10, 2, 0, 14, 2, 0, 65521, 2, 0, 65525, 2, 0, 65526, 2, 0, 65527, 2, 0, 65528, 2, 0, 65529, 2, 0, 65530, 2, 0, 65531, 2, 0, 65532, 2, 0, 6, 3, 0, 10, 3, 0, 14, 3, 0, 65521, 3, 0, 65529, 3, 0, 6, 4, 0, 10, 4, 0, 14, 4, 0, 65521, 4, 0, 65529, 4, 0, 6, 5, 0, 10, 5, 0, 14, 5, 0, 65521, 5, 0, 65529, 5, 0, 0, 6, 0, 1, 6, 0, 2, 6, 0, 6, 6, 0, 14, 6, 0, 65521, 6, 0, 65525, 6, 0, 65529, 6, 0, 65533, 6, 0, 65534, 6, 0, 65535, 6, 0, 6, 7, 0, 14, 7, 0, 65521, 7, 0, 65525, 7, 0, 6, 8, 0, 14, 8, 0, 65521, 8, 0, 65525, 8, 0, 6, 9, 0, 10, 9, 0, 14, 9, 0, 65521, 9, 0, 65525, 9, 0, 0, 10, 0, 1, 10, 0, 2, 10, 0, 6, 10, 0, 10, 10, 0, 14, 10, 0, 65521, 10, 0, 65525, 10, 0, 65526, 10, 0, 65527, 10, 0, 65528, 10, 0, 65529, 10, 0, 65530, 10, 0, 65531, 10, 0, 65535, 10, 0, 14, 11, 0, 65521, 11, 0, 14, 12, 0, 65521, 12, 0, 14, 13, 0, 65521, 13, 0, 0, 14, 0, 1, 14, 0, 2, 14, 0, 3, 14, 0, 4, 14, 0, 5, 14, 0, 6, 14, 0, 7, 14, 0, 8, 14, 0, 9, 14, 0, 10, 14, 0, 11, 14, 0, 12, 14, 0, 13, 14, 0, 14, 14, 0, 65521, 14, 0, 65522, 14, 0, 65523, 14, 0, 65524, 14, 0, 65525, 14, 0, 65526, 14, 0, 65527, 14, 0, 65528, 14, 0, 65529, 14, 0, 65530, 14, 0, 65531, 14, 0, 65532, 14, 0, 65533, 14, 0, 65534, 14, 0, 65535, 14, 0, 0, 65520, 0, 1, 65520, 0, 2, 65520, 0, 3, 65520, 0, 4, 65520, 0, 5, 65520, 0, 6, 65520, 0, 7, 65520, 0, 8, 65520, 0, 9, 65520, 0, 10, 65520, 0, 11, 65520, 0, 12, 65520, 0, 13, 65520, 0, 14, 65520, 0, 65521, 65520, 0, 65522, 65520, 0, 65523, 65520, 0, 65524, 65520, 0, 65525, 65520, 0, 65526, 65520, 0, 65527, 65520, 0, 65528, 65520, 0, 65529, 65520, 0, 65530, 65520, 0, 65531, 65520, 0, 65532, 65520, 0, 65533, 65520, 0, 65534, 65520, 0, 65535, 65520, 0, 14, 65521, 0, 65521, 65521, 0, 14, 65522, 0, 65521, 65522, 0, 14, 65523, 0, 65521, 65523, 0, 0, 65524, 0, 1, 65524, 0, 5, 65524, 0, 6, 65524, 0, 7, 65524, 0, 8, 65524, 0, 9, 65524, 0, 10, 65524, 0, 14, 65524, 0, 65521, 65524, 0, 65525, 65524, 0, 65526, 65524, 0, 65527, 65524, 0, 65528, 65524, 0, 65529, 65524, 0, 65530, 65524, 0, 65534, 65524, 0, 65535, 65524, 0, 10, 65525, 0, 14, 65525, 0, 65521, 65525, 0, 65525, 65525, 0, 10, 65526, 0, 14, 65526, 0, 65521, 65526, 0, 65525, 65526, 0, 10, 65527, 0, 14, 65527, 0, 65521, 65527, 0, 65525, 65527, 0, 0, 65528, 0, 1, 65528, 0, 2, 65528, 0, 6, 65528, 0, 10, 65528, 0, 14, 65528, 0, 65521, 65528, 0, 65525, 65528, 0, 65529, 65528, 0, 65530, 65528, 0, 65531, 65528, 0, 65532, 65528, 0, 65533, 65528, 0, 65534, 65528, 0, 65535, 65528, 0, 2, 65529, 0, 6, 65529, 0, 10, 65529, 0, 14, 65529, 0, 65521, 65529, 0, 65525, 65529, 0, 65529, 65529, 0, 2, 65530, 0, 6, 65530, 0, 10, 65530, 0, 14, 65530, 0, 65521, 65530, 0, 65525, 65530, 0, 65529, 65530, 0, 14, 65531, 0, 65521, 65531, 0, 65525, 65531, 0, 65529, 65531, 0, 14, 65532, 0, 65521, 65532, 0, 65529, 65532, 0, 65533, 65532, 0, 14, 65533, 0, 65521, 65533, 0, 65529, 65533, 0, 65533, 65533, 0, 0, 65534, 0, 4, 65534, 0, 5, 65534, 0, 6, 65534, 0, 10, 65534, 0, 14, 65534, 0, 65521, 65534, 0, 65529, 65534, 0, 65533, 65534, 0, 65534, 65534, 0, 65535, 65534, 0, 10, 65535, 0, 14, 65535, 0, 65521, 65535, 0, 65525, 65535, 0 )
}
__meta__ = {
"_editor_clip_": 0,
"_editor_floor_": Vector3( 0, 0, 0 )
}

[node name="enemy1" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -8.36892, 1, 0.665199 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="enemy1"]
autoplay = "enemy1animation"
anims/enemy1animation = SubResource( 4 )

[node name="enemy2" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4.72957, 1, 4.39131 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="enemy2"]
autoplay = "enemy2animation"
anims/enemy1animation = SubResource( 5 )
anims/enemy2animation = SubResource( 6 )
anims/enemy3animation = SubResource( 7 )

[node name="enemy3" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.462525, 1, -3.33559 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="enemy3"]
autoplay = "enemy3animation"
anims/enemy1animation = SubResource( 8 )
anims/enemy2animation = SubResource( 9 )
anims/enemy3animation = SubResource( 10 )

[node name="Spatial" type="Spatial" parent="."]

[node name="Spatial_coinholder1" type="Spatial" parent="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 8.629, 0, 0 )

[node name="coin" parent="Spatial/Spatial_coinholder1" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )

[node name="Spatial_coinholder2" type="Spatial" parent="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.38238, 0, 10.5353 )

[node name="coin" parent="Spatial/Spatial_coinholder2" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )

[node name="Spatial_coinholder3" type="Spatial" parent="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -8.44683, 0, -5.32841 )

[node name="coin" parent="Spatial/Spatial_coinholder3" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )

[node name="Spatial_coinholder4" type="Spatial" parent="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 6.39699, 0, -9.49714 )

[node name="coin" parent="Spatial/Spatial_coinholder4" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )

[node name="Spatial_coinholder5" type="Spatial" parent="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -7.59089, 0, -13.3175 )

[node name="coin" parent="Spatial/Spatial_coinholder5" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )

[node name="Control" type="Control" parent="."]
margin_left = 1.43201
margin_right = 1281.43
margin_bottom = 720.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Control"]
position = Vector2( 1046.47, 60.0298 )
scale = Vector2( 0.20111, 0.204275 )
texture = ExtResource( 9 )

[node name="Label" type="Label" parent="Control"]
margin_left = 1098.85
margin_top = 36.0
margin_right = 1147.85
margin_bottom = 110.0
custom_fonts/font = SubResource( 11 )
custom_colors/font_color = Color( 0.980392, 0.968627, 0.278431, 1 )
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_Counter" type="Label" parent="Control"]
margin_left = 1149.87
margin_top = -15.7517
margin_right = 1286.87
margin_bottom = 141.248
custom_fonts/font = SubResource( 12 )
custom_colors/font_color = Color( 0.980392, 0.968627, 0.278431, 1 )
text = "Q"
valign = 1
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="Control/Label_Counter"]
[connection signal="body_entered" from="enemy1" to="KinematicBody_Steve" method="_on_enemy_body_entered"]
[connection signal="body_entered" from="enemy2" to="KinematicBody_Steve" method="_on_enemy_body_entered"]
[connection signal="body_entered" from="enemy3" to="KinematicBody_Steve" method="_on_enemy_body_entered"]
[connection signal="body_entered" from="Spatial/Spatial_coinholder1/coin" to="Spatial/Spatial_coinholder1/coin" method="_on_coin_body_entered"]
[connection signal="coinCollected" from="Spatial/Spatial_coinholder1/coin" to="Control/Label_Counter" method="_on_coin_collected"]
[connection signal="body_entered" from="Spatial/Spatial_coinholder2/coin" to="Spatial/Spatial_coinholder2/coin" method="_on_coin_body_entered"]
[connection signal="coinCollected" from="Spatial/Spatial_coinholder2/coin" to="Control/Label_Counter" method="_on_coin_collected"]
[connection signal="body_entered" from="Spatial/Spatial_coinholder3/coin" to="Spatial/Spatial_coinholder3/coin" method="_on_coin_body_entered"]
[connection signal="coinCollected" from="Spatial/Spatial_coinholder3/coin" to="Control/Label_Counter" method="_on_coin_collected"]
[connection signal="body_entered" from="Spatial/Spatial_coinholder4/coin" to="Spatial/Spatial_coinholder4/coin" method="_on_coin_body_entered"]
[connection signal="coinCollected" from="Spatial/Spatial_coinholder4/coin" to="Control/Label_Counter" method="_on_coin_collected"]
[connection signal="body_entered" from="Spatial/Spatial_coinholder5/coin" to="Spatial/Spatial_coinholder5/coin" method="_on_coin_body_entered"]
[connection signal="coinCollected" from="Spatial/Spatial_coinholder5/coin" to="Control/Label_Counter" method="_on_coin_collected"]
[connection signal="timeout" from="Control/Label_Counter/Timer" to="Control/Label_Counter" method="_on_Timer_timeout"]
